tests/ui/issues/issue-3154.stderr
error[E0621]: explicit lifetime required in the type of `x`
  --> $DIR/issue-3154.rs:6:5
   |
LL |     Thing { x: x }
   |     ^^^^^^^^^^^^^^ lifetime `'a` required
   |
help: add explicit lifetime `'a` to the type of `x`
   |
LL | fn thing<'a,Q>(x: &'a Q) -> Thing<'a,Q> {
   |                    ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0621`.
